# apply_agent

./: .env.example  .gitignore  README.md  debug_search.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
src/: api.py  config.py  database.py  graph.py  main.py  models.py  state.py
src/modules/: analyzer.py  browser.py  generator.py  parser.py  search.py
src/nodes/: action.py  analysis.py  ingestion.py  rejection.py  search.py  tailoring.py
